fixed multi language problem